public/css/styles.css
html {
    overflow-y:scroll;
}

body, .container-fluid {
  background:#fafafa !important;
}
  .lineaPedido>td {
    max-height: 10px;
  }
  .productPrice {
    text-align: right;

  }
  .productQty {
    text-align:center !important;
    max-width:45px;
  }
  .pedido {
    cursor:pointer;
    background:#232323;
    color:white;
  }
  .animated {
    animation-duration: .2s ;
  }
  .animated .pulse {
    animation-duration: .4s ;
  }

  .componentWrap {
    padding:5px 20px 20px 20px;
    margin:10px 0px;
    min-width: 300px;
    background:white;
    box-shadow:1px 2px 2px #ccc;
    border:1px solid #ccc;
    position:relative
  }

  .componentWrap>h3 {
    margin-bottom:20px
  }

  span.fa.fa-cart-plus {
    font-size:25px;
    cursor:pointer;
  }
  span.fa.fa-cart-plus:hover {
    color:orange;
  }
  span.fa.fa-cart-plus:active {
    color:#333;
  }
  .filtering {
    margin-bottom:10px;
  }


  /************************ Inicio de Sesion ******************/

  .form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

/****************** FIn Inicio de Sesion ********************************/

  .summary {
    padding:5px 20px 20px 20px;
    background:white;
    box-shadow:1px 2px 2px #ccc;
    border:1px solid #ccc;
    width:260px;
  }


/********************Admin PAnel ******************************************/
ul.nav.navbar-nav.side-nav, nav.navbar.navbar-inverse.navbar-fixed-top {
  box-shadow: 4px 4px 2px grey;
}

@media (max-width: 767px) {
    .navbar-fixed-top {
        position: relative;
        top: auto;
    }
    .navbar-collapse {
        max-height: none;
    }
    body {
        margin: 0 !important;
    }
}


.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
    border: none;
}

.clientDetails {
  margin-top:20px;
}

th.headLink:hover {
  background:#C95438;
}

th.headLink:hover > a {
  color:white
}

a.editHeadLink {
  color:#C95438;
  text-decoration: none;
  display:block;
}

a.editHeadLink:hover {
    color:white;
}



.hover-content {

    position:absolute;
    width:100%;
    top:50%;
    margin-top:-25px;

}
.hover-content .animated {
        animation: rotate .9s infinite linear;
        -moz-animation: rotate .9s infinite linear;
        -webkit-animation: rotate .9s infinite linear;
}

@keyframes rotate {
  0%    { transform: rotate(0deg); }
  100%  { transform: rotate(360deg); }
}

.icon-hover {
    box-shadow: inset 1px 1px 10px white;
    border-radius: 5px;
    z-index: 15;
    text-align: center;
    background-color: rgba(171, 163, 155, 0.6);
    display:none;
    position:absolute;
    width:100%;
    height: 100%;
    opacity:.9;
}

.userForm {
    min-width:300px;
    width:50%;
    margin:auto;
}

@media (max-width: 1200px) {
  h1.page-header, ol.breadcrumb, h3 {
    margin:8px;
  }

  nav.navbar {
    margin-bottom:10px;
  }
}

